# AlphaAvatar-distill

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
assets/: perf_trend.json
configs/: stage0_qwen3_4b_thinking.json  stage0_qwen3_4b_thinking_v1.json  stage1_qwen3_0p6b_from_4b_thinking.json  stage3_s1_ffn_norm.json  stage3_s1_gpu_smoke.json  stage3_smoke_cpu.json
data/stage2/: stage2_offline_v0.manifest.json
data/warmup/: holdout_v1.manifest.json  warmup_v0.jsonl  warmup_v1.manifest.json
logs/: STATE.md  decisions.md  supported_models.md
logs/experiments/: 2026-07-12_stage0_qwen3_4b_thinking_v0.md  2026-07-13_stage0_qwen3_4b_thinking_v1.md  2026-07-14_stage1_qwen3_0p6b_init_v0.md  2026-07-21_stage2_offline_v0.md  2026-07-22_stage3_s1_gpu_run.md  2026-07-22_stage3_trainer_toy.md
scripts/: build_holdout_v1.py  build_stage2_v0.py  build_warmup_v1.py  collect_stage0.py  dry_run_stage2.py  eval_ppl.py  init_stage1.py  plot_perf_trend.py  train_stage3.py
src/aadistill/: __init__.py  collect.py  data.py  env.py  manifest.py  project.py  sandwich.py  student.py  teacher.py  train.py
tests/: test_collect_toy.py  test_data_toy.py  test_stage1_toy.py  test_train_toy.py
